--- a/vim.yaml
+++ b/vim.yaml
@@ -14,6 +14,10 @@ globals:
       - type: string
       - type: function
 
+  pending:
+    args:
+      - type: string
+
   before_each:
     args:
       - type: function
@@ -26,6 +30,8 @@ globals:
       - type: any
       - type: any
 
+  assert.is:
+    any: true
   assert.is.Nil:
     args:
       - type: any
