--- a/vim.yaml
+++ b/vim.yaml
@@ -35,6 +35,9 @@ globals:
   assert.is.Nil:
     args:
       - type: any
+  assert.has_error:
+    args:
+      - type: function
 
   assert.is_not:
     any: true
